<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar_address"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/gray_light">

    </android.support.v7.widget.Toolbar>
    
    <ImageView
        android:id="@+id/no_address"
        android:layout_width="300sp"
        android:layout_height="300sp"
        android:src="@mipmap/ordernull"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_margin="10sp"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/no_address"
        android:text="@string/tip_no_address"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tool_bar_address"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="@string/address_manager"
        android:textSize="20sp"
        android:textColor="@color/black_80"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_add"
        android:textSize="15sp"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:textColor="@color/pink"/>

</RelativeLayout>