<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
             android:background="#FFDDDCD1"
              android:layout_width="match_parent"
              android:layout_height="240dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin">

        <com.chaoteng.hf.widget.CircleImageView
            android:id="@+id/user_avatar_view"
            android:layout_width="@dimen/navigation_avatar_size"
            android:layout_height="@dimen/navigation_avatar_size"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:src="@mipmap/ico_user_default"
            app:border_color="@android:color/white"
            app:border_width="1dp" />


        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_avatar_view"
            android:layout_centerHorizontal="true"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_22" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_bar_default_height"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/zhongcai"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_top_left"
                    android:textColor="#FF4A4A4A"
                    android:textSize="@dimen/text_size_16"/>

            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/shoucai"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_top_right"
                    android:textColor="#FF4A4A4A"
                    android:textSize="@dimen/text_size_16"/>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>